--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Equipamento/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Equipamento/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Model.ViewModel.EquipamentoViewModel
+﻿@using Model
+@model Model.ViewModel.EquipamentoViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -14,9 +15,9 @@
 
                     <div class="card-body">
                         <div class="col-md-10">
-                            <dl class="dl-horizontal">                                
+                            <dl class="dl-horizontal">
                                 <dt>
-                                    Sala 
+                                    Sala
                                 </dt>
                                 <dd>
                                     <p class="form-control"> @Html.DisplayFor(model => model.SalaModel.Titulo)</p>
@@ -25,20 +26,23 @@
                                     Bloco
                                 </dt>
                                 <dd>
-                                    <p class="form-control"> @Html.DisplayFor(model => model.BlocoModel.Titulo)</p>                                    
+                                    <p class="form-control"> @Html.DisplayFor(model => model.BlocoModel.Titulo)</p>
                                 </dd>
-                                <dt>
-                                    @Html.DisplayNameFor(model => model.EquipamentoModel.Marca)
-                                </dt>
-                                <dd>
-                                    <p class="form-control">@Html.DisplayFor(model => model.EquipamentoModel.Marca)</p>
-                                </dd>
-                                <dt>
-                                    @Html.DisplayNameFor(model => model.EquipamentoModel.Modelo)
-                                </dt>
-                                <dd>
-                                    <p class="form-control">@Html.DisplayFor(model => model.EquipamentoModel.Modelo)</p>
-                                </dd>
+                                @if (Model.EquipamentoModel.TipoEquipamento != EquipamentoModel.TIPO_LUZES)
+                                {
+                                    <dt>
+                                        @Html.DisplayNameFor(model => model.EquipamentoModel.Marca)
+                                    </dt>
+                                    <dd>
+                                        <p class="form-control">@Html.DisplayFor(model => model.EquipamentoModel.Marca)</p>
+                                    </dd>
+                                    <dt>
+                                        @Html.DisplayNameFor(model => model.EquipamentoModel.Modelo)
+                                    </dt>
+                                    <dd>
+                                        <p class="form-control">@Html.DisplayFor(model => model.EquipamentoModel.Modelo)</p>
+                                    </dd>
+                                }
                                 <dt>
                                     @Html.DisplayNameFor(model => model.EquipamentoModel.Descricao)
                                 </dt>
@@ -64,7 +68,7 @@
                                         <p class="form-control"><b>Nenhum Associado</b></p>
                                     }
                                 </dd>
-                                @if (Model.Codigos != null)
+                                @if (Model.Codigos != null && Model.Codigos.Any())
                                 {
                                     <dt>
                                         Códigos Infravermelhos
