--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Home/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Home/Index.cshtml
@@ -40,14 +40,15 @@
 
                                                                 <div class="form-control" hidden>
                                                                     <input class="form-control" name="SalaId" value="@item.Sala.Id" />
-                                                                    <input class="form-control" name="EquipamentoId" value="@item.MonitoramentoLuzes.EquipamentoId" />
+                                                                    <input class="form-control" name="EquipamentoId" value="@item.MonitoramentoLuzes.IdEquipamento" />
                                                                     <input class="form-control" name="Id" value="@item.MonitoramentoLuzes.Id" />
                                                                     <input class="form-control" name="SalaParticular" value="True" />
                                                                 </div>
 
                                                                 <h5 class="card-text">Luzes</h5>
                                                                 <label class="switch" onchange="submitForm('form-@item.MonitoramentoLuzes.Id',@item.SalaExclusiva.Id,true)">
-                                                                    @if (item.MonitoramentoLuzes.Estado)
+                                                                    <!-- TODO: esse negocio de estado ta no equipamento agr tem q mudar ainda
+                                                                        if (item.MonitoramentoLuzes.Estado)
                                                                     {
                                                                         <input type="checkbox" name="Estado" id="luzes-@item.SalaExclusiva.Id" value="@item.MonitoramentoLuzes.Estado" checked />
                                                                     }
@@ -56,6 +57,7 @@
                                                                         <input type="checkbox" name="Estado" id="luzes-@item.SalaExclusiva.Id" value="@item.MonitoramentoLuzes.Estado" />
                                                                     }
                                                                     <span class="slider round"></span>
+                                                                    -->
                                                                 </label>
 
                                                             </form>
@@ -74,14 +76,15 @@
 
                                                                 <div class="form-control" hidden>
                                                                     <input class="form-control" name="SalaId" value="@item.Sala.Id" />
-                                                                    <input class="form-control" name="EquipamentoId" value="@item.MonitoramentoCondicionadores.EquipamentoId" />
+                                                                    <input class="form-control" name="EquipamentoId" value="@item.MonitoramentoCondicionadores.IdEquipamento" />
                                                                     <input class="form-control" name="Id" value="@item.MonitoramentoCondicionadores.Id" />
                                                                     <input class="form-control" name="SalaParticular" value="True" />
                                                                 </div>
 
                                                                 <h5 class="card-text">Condicionadores</h5>
                                                                 <label class="switch" onchange="submitForm('form-@item.MonitoramentoCondicionadores.Id',@item.SalaExclusiva.Id,true)">
-                                                                    @if (item.MonitoramentoCondicionadores.Estado)
+                                                                    <!-- TODO: esse negocio de estado ta no equipamento agr tem q mudar ainda
+                                                                    if (item.(bMonitoramentoCondicionadores.Estado)
                                                                     {
                                                                         <input type="checkbox" name="Estado" id="arCondicionado-@item.SalaExclusiva.Id" value="@item.MonitoramentoCondicionadores.Estado" checked />
                                                                     }
@@ -90,6 +93,8 @@
                                                                         <input type="checkbox" name="Estado" id="arCondicionado-@item.SalaExclusiva.Id" value="@item.MonitoramentoCondicionadores.Estado" />
                                                                     }
                                                                     <span class="slider round"></span>
+
+                                                                    -->
                                                                 </label>
                                                             </form>
                                                         }
