--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Home/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Home/Index.cshtml
@@ -302,7 +302,8 @@ else if (TempData["mensagemErro"] != null)
                     '<div class="form-control" hidden>' +
                     '<input class="form-control" name="SalaId" value="' + data.sala.id + '" />' +
                     '<input class="form-control" name="Id" value="' + data.monitoramentoLuzes.id + '" />' +
-                    '<input class="form-control" name="EquipamentoId" value="' + data.monitoramentoLuzes.equipamentoId + '" />' +
+                    // Corrigido: Mudando de equipamentoId para idEquipamento para manter consistência
+                    '<input class="form-control" name="EquipamentoId" value="' + data.monitoramentoLuzes.idEquipamento + '" />' +
                     '<input class="form-control" name="SalaParticular" value="False" />' +
                     '</div>' +
 
@@ -323,7 +324,8 @@ else if (TempData["mensagemErro"] != null)
                     '<div class="form-control" hidden>' +
                     '<input class="form-control" name="SalaId" value="' + data.sala.id + '" />' +
                     '<input class="form-control" name="Id" value="' + data.monitoramentoCondicionadores.id + '" />' +
-                    '<input class="form-control" name="EquipamentoId" value="' + data.monitoramentoCondicionadores.equipamentoId + '" />' +
+                    // Corrigido: Mudando de equipamentoId para idEquipamento para manter consistência
+                    '<input class="form-control" name="EquipamentoId" value="' + data.monitoramentoCondicionadores.idEquipamento + '" />' +
                     '<input class="form-control" name="SalaParticular" value="False" />' +
                     '</div>' +
 
