tudo e mais um pouco

--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
@@ -33,7 +33,7 @@
                             <i class="fa fa-user pull-right"></i> 
                             Meus Dados
                         </a>
-                        <a class="dropdown-item" asp-controller="Home" asp-action="Index">
+                        <a class="dropdown-item" asp-controller="Usuario" asp-action="EditPassword">
                             <i class="nav-icon fa fa-lock "></i>
                             Alterar Senha
                         </a>
