--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_TopBarPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_TopBarPartial.cshtml
@@ -1,15 +1,16 @@
-﻿@{
-    ViewData["Title"] = "_TopBarPartial";
-}
+﻿@{  
+    ViewData["Title"] = "_TopBarPartial";  
+}  
 
-<!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <div class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
+<!-- Content Wrapper. Contains page content -->  
+<div class="content-wrapper">  
+    <!-- Content Header (Page header) -->  
+    <div class="content-header">  
+        <div class="container-fluid">  
+            <div class="row mb-2">  
 
-            </div><!-- /.row -->
-        </div><!-- /.container-fluid -->
-    </div>
-    <!-- /.content-header -->
+            </div><!-- /.row -->  
+        </div><!-- /.container-fluid -->  
+    </div>  
+    <!-- /.content-header -->  
+</div> <!-- Closing tag added for content-wrapper -->
