--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_Layout.cshtml
@@ -1,183 +1,165 @@
-﻿@{
-    var action = ViewContext.RouteData.Values["action"].ToString();
-}
+﻿@{  
+    var action = ViewContext.RouteData.Values["action"].ToString();  
+}  
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>@ViewData["Title"] - SalasUfsWeb</title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <!-- Tempusdominus Bbootstrap 4 -->
-    <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-    <!-- iCheck -->
-    <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-    <!-- JQVMap -->
-    <link rel="stylesheet" href="~/plugins/jqvmap/jqvmap.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="~/css/adminlte.min.css">
-    <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-    <!-- Daterange picker -->
-    <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
-    <!-- summernote -->
-    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.css">
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/custom.css" />
-    <!-- DataTables -->
-    <link rel="stylesheet" href="~/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="~/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="~/css/adminlte.min.css">
-    <link rel="stylesheet" href="~/css/dashboard.css" />
+<!DOCTYPE html>  
+<html>  
+<head>  
+    <meta charset="utf-8">  
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">  
+    <title>@ViewData["Title"] - SalasUfsWeb</title>  
+    <!-- Tell the browser to be responsive to screen width -->  
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <!-- Font Awesome -->  
+    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">  
+    <!-- Ionicons -->  
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">  
+    <!-- Tempusdominus Bbootstrap 4 -->  
+    <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">  
+    <!-- iCheck -->  
+    <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css">  
+    <!-- JQVMap -->  
+    <link rel="stylesheet" href="~/plugins/jqvmap/jqvmap.min.css">  
+    <!-- Theme style -->  
+    <link rel="stylesheet" href="~/css/adminlte.min.css">  
+    <!-- overlayScrollbars -->  
+    <link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">  
+    <!-- Daterange picker -->  
+    <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">  
+    <!-- summernote -->  
+    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.css">  
+    <link rel="stylesheet" href="~/css/site.css" />  
+    <link rel="stylesheet" href="~/css/custom.css" />  
+    <!-- DataTables -->  
+    <link rel="stylesheet" href="~/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">  
+    <link rel="stylesheet" href="~/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">  
+    <!-- Theme style -->  
+    <link rel="stylesheet" href="~/css/adminlte.min.css">  
+    <link rel="stylesheet" href="~/css/dashboard.css" />  
 
-    <!-- Google Font: Source Sans Pro -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <!-- Google Font: Source Sans Pro -->  
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">  
 
-</head>
-@if (!User.Identity.IsAuthenticated)
-{
-    <body class="hold-transition login-page">
-        @if (action == "PublicUsuarioCreate")
-        {
-            <div class="login-box" style="width: 60%;">            
-                       
-                    @RenderBody()
-         
-        </div>
-        <footer class="main-footer element-center transparent-background" style="width: 59%; border-radius: 5px">
-            <strong>
-                Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.
-            </strong>
-            All rights reserved.
-            <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 5.1
-            </div>
+</head>  
+<body class="@(!User.Identity.IsAuthenticated ? "hold-transition login-page" : "hold-transition sidebar-mini layout-fixed")">  
+    @if (!User.Identity.IsAuthenticated)  
+    {  
+        @if (action == "PublicUsuarioCreate")  
+        {  
+            <div class="login-box" style="width: 60%;">  
+                @RenderBody()  
+            </div>  
+            <footer class="main-footer element-center transparent-background" style="width: 59%; border-radius: 5px">  
+                <strong>  
+                    Copyright &copy;  
+                    <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.  
+                </strong>  
+                All rights reserved.  
+                <div class="float-right d-none d-sm-inline-block">  
+                    <b>Version</b> 5.2  
+                </div>  
+            </footer>  
+        }  
+        else  
+        {  
+            <div class="login-box">  
+            <div class="container" style="display: flex; justify-content: center; width: 100%; margin: 0 0 -15px 0">  
+                <img src="@Url.Content("~/img/4.png")" alt="Logo UFS" width="285" style="margin-bottom: 0;">  
+            </div>  
+            <div id="div-msg" class="div-msg" role="alert"></div>  
+            <!-- /.login-logo -->  
+            <div class="card" style="margin-top: -10px;">  
+                <div class="card-body login-card-body" style="border-radius: 5px">  
+                    @RenderBody()  
+                </div>  
+                <!-- /.login-card-body -->  
+            </div>  
+        </div>  
+        <footer class="main-footer element-center transparent-background" style="border-radius: 5px">  
+            <strong>  
+                Copyright &copy;  
+                <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.  
+            </strong>  
+            All rights reserved.  
+            <div class="float-right d-none d-sm-inline-block">  
+                <b>Version</b> 5.2  
+            </div>  
         </footer>
-        }
-        else if (action != "PublicUsuarioCreate")
-        {
-        <div class="login-box">
-            <div class="container" style="display: flex; justify-content: center; width: 100%; margin: 0">
-                <img src="@Url.Content("~/img/1.png")" alt="Logo UFS" style="max-width: 350px; height: auto; margin-bottom: 10px;">
-            </div>
-            <div id="div-msg" class="div-msg" role="alert"></div>
-            <!-- /.login-logo -->
-            <div class="card" style="margin-top: 0;">
-                <div class="card-body login-card-body" style="border-radius: 5px">
-                    @RenderBody()
-                </div>
-                <!-- /.login-card-body -->
-            </div>
-        </div>
-        <footer class="main-footer element-center transparent-background" style="border-radius: 5px">
-            <strong>
-                Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.
-            </strong>
-            All rights reserved.
-            <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 5.1
-            </div>
-        </footer>
-        }
-        
-        <!-- /.login-box -->
-        <!-- jQuery -->
-        <script src="~/plugins/jquery/jquery.min.js"></script>
-        <!-- Bootstrap 4 -->
-        <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <!-- AdminLTE App -->
-        <script src="~/js/adminlte.min.js"></script>
-        @RenderSection("Scripts", required: false)
+        }  
+    }  
+    else  
+    {  
+        <div class="wrapper">  
+            <!-- Content Wrapper. Contains page content -->  
+            <partial name="_MenuPartial" />  
+            <partial name="_TopBarPartial" />  
+            <!-- Main content -->  
+            <section class="content">  
+                <div class="container-fluid">  
+                    <!-- Small boxes (Stat box) -->  
+                    @RenderBody()  
+                </div>  
+            </section>  
+        </div>  
 
-    </body>
-}
-else
-{
-    @:<body class="hold-transition sidebar-mini layout-fixed">
-        <div class="wrapper">
-            <!-- Content Wrapper. Contains page content -->
-            <partial name="_MenuPartial" />
-            <partial name="_TopBarPartial" />
-            <!-- Main content -->
-            <section class="content">
-                <div class="container-fluid">
-                    <!-- Small boxes (Stat box) -->
-                    @RenderBody()
-                </div>
-            </section>
-        </div>
+        <footer class="main-footer">  
+            <strong>  
+                Copyright &copy;  
+                <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.  
+            </strong>  
+            All rights reserved.  
+            <div class="float-right d-none d-sm-inline-block">  
+                <b>Version</b> 5.2  
+            </div>  
+        </footer>  
 
-        @:</div> <!-- fechando a tag do menu-->
+        <!-- Control Sidebar -->  
+        <aside class="control-sidebar control-sidebar-dark">  
+            <!-- Control sidebar content goes here -->  
+        </aside>  
+        <!-- /.control-sidebar -->  
+    }  
 
-        <footer class="main-footer">
-            <strong>
-                Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> <a href="http://g2psi.educacao.ws/" target="_blank">G2PSI</a>.
-            </strong>
-            All rights reserved.
-            <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 5.1
-            </div>
-        </footer>
+    <!-- jQuery -->  
+    <script src="~/plugins/jquery/jquery.min.js"></script>  
+    <!-- jQuery UI 1.11.4 -->  
+    <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>  
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->  
+    <script>  
+        $.widget.bridge('uibutton', $.ui.button)  
+    </script>  
+    <!-- Bootstrap 4 -->  
+    <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>  
+    <!-- ChartJS -->  
+    <script src="~/plugins/chart.js/Chart.min.js"></script>  
+    <!-- Sparkline -->  
+    <script src="~/plugins/sparklines/sparkline.js"></script>  
+    <!-- JQVMap -->  
+    <script src="~/plugins/jqvmap/jquery.vmap.min.js"></script>  
+    <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>  
+    <!-- jQuery Knob Chart -->  
+    <script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>  
+    <!-- daterangepicker -->  
+    <script src="~/plugins/moment/moment.min.js"></script>  
+    <script src="~/plugins/daterangepicker/daterangepicker.js"></script>  
+    <!-- Tempusdominus Bootstrap 4 -->  
+    <script src="~/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>  
+    <!-- Summernote -->  
+    <script src="~/plugins/summernote/summernote-bs4.min.js"></script>  
+    <!-- overlayScrollbars -->  
+    <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>  
+    <!-- AdminLTE App -->  
+    <script src="~/js/adminlte.js"></script>  
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->  
+    <script src="~/js/pages/dashboard.js"></script>  
+    <!-- AdminLTE for demo purposes -->  
+    <script src="~/js/demo.js"></script>  
+    <script src="~/js/table-script.js"></script>  
+    <script src="~/plugins/datatables/jquery.dataTables.min.js"></script>  
+    <script src="~/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>  
+    <script src="~/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>  
+    <script src="~/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>  
 
-        <!-- Control Sidebar -->
-        <aside class="control-sidebar control-sidebar-dark">
-            <!-- Control sidebar content goes here -->
-        </aside>
-        <!-- /.control-sidebar -->
-        @:</div>
- <!-- ./wrapper -->
-        <!-- jQuery -->
-
-        <script src="~/plugins/jquery/jquery.min.js"></script>
-        <!-- jQuery UI 1.11.4 -->
-        <script src="~/plugins/jquery-ui/jquery-ui.min.js"></script>
-        <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-        <script>
-            $.widget.bridge('uibutton', $.ui.button)
-        </script>
-        <!-- Bootstrap 4 -->
-        <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <!-- ChartJS -->
-        <script src="~/plugins/chart.js/Chart.min.js"></script>
-        <!-- Sparkline -->
-        <script src="~/plugins/sparklines/sparkline.js"></script>
-        <!-- JQVMap -->
-        <script src="~/plugins/jqvmap/jquery.vmap.min.js"></script>
-        <script src="~/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-        <!-- jQuery Knob Chart -->
-        <script src="~/plugins/jquery-knob/jquery.knob.min.js"></script>
-        <!-- daterangepicker -->
-        <script src="~/plugins/moment/moment.min.js"></script>
-        <script src="~/plugins/daterangepicker/daterangepicker.js"></script>
-        <!-- Tempusdominus Bootstrap 4 -->
-        <script src="~/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-        <!-- Summernote -->
-        <script src="~/plugins/summernote/summernote-bs4.min.js"></script>
-        <!-- overlayScrollbars -->
-        <script src="~/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-        <!-- AdminLTE App -->
-        <script src="~/js/adminlte.js"></script>
-        <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-        <script src="~/js/pages/dashboard.js"></script>
-        <!-- AdminLTE for demo purposes -->
-        <script src="~/js/demo.js"></script>
-        <script src="~/js/table-script.js"></script>
-        <script src="~/plugins/datatables/jquery.dataTables.min.js"></script>
-        <script src="~/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-        <script src="~/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-        <script src="~/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-
-        @RenderSection("Scripts", required: false)
-    @:</body>
-}
+    @RenderSection("Scripts", required: false)  
+</body>  
 </html>
