--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_MenuPartial.cshtml
@@ -38,7 +38,7 @@
                             Alterar Senha
                         </a>
                         <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item" asp-controller="login" asp-action="logout">
+                        <a class="dropdown-item" href="/Account/Logout">
                             <i class="nav-icon fa fa-power-off"></i>
                             Sair
                         </a>
