--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -15,4 +15,6 @@
             crossorigin="anonymous"
             integrity="sha256-9GycpJnliUjJDVDqP0UEu/bsm9U+3dnQUH8+3W10vkY=">
     </script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 </environment>
